[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/GFX/Interface/Buttons/GlowPause.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/Quicksand-Medium.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://GUI/Interface/InGame.gd" type="Script" id=3]
[ext_resource path="res://Assets/GFX/Interface/Buttons/Pause.png" type="Texture" id=4]
[ext_resource path="res://Assets/GFX/Interface/Coins/GlowCoin.png" type="Texture" id=5]
[ext_resource path="res://Assets/GFX/Interface/Coins/CoinYellow.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 60
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 2 )

[node name="InGame" type="Control" groups=[
"Interface",
]]
anchor_left = 0.00013413
anchor_right = 0.00013417
margin_right = 2280.0
margin_bottom = 1080.0
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ 100.442, 980.871, 179.676, 849.592, 760.285, 333.931 ],
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 119.642, 2160.0, 1140.75 ]
}

[node name="PauseGlow" type="Sprite" parent="."]
position = Vector2( 118.88, 981.562 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 1 )

[node name="DistanceGlow" type="Sprite" parent="."]
position = Vector2( 2080.6, 88.6422 )
scale = Vector2( 1.5, 1 )
texture = ExtResource( 5 )

[node name="CoinGlow" type="Sprite" parent="."]
position = Vector2( 300, 100 )
scale = Vector2( 1.9, 1 )
texture = ExtResource( 5 )

[node name="Coin" type="Sprite" parent="."]
position = Vector2( 110.63, 103.15 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )

[node name="DistanceValue" type="Label" parent="."]
margin_left = 1913.42
margin_top = 56.9185
margin_right = 2263.42
margin_bottom = 131.919
rect_min_size = Vector2( 350, 0 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.403922, 0.4, 0.4, 1 )
text = "500 m"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinValue" type="Label" parent="."]
margin_left = 173.283
margin_top = 61.7798
margin_right = 373.283
margin_bottom = 136.78
rect_min_size = Vector2( 300, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.403922, 0.4, 0.4, 1 )
text = "1000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseButton" type="TextureButton" parent="."]
margin_left = 43.0562
margin_top = 906.458
margin_right = 356.056
margin_bottom = 1219.46
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="PauseButton" to="." method="_on_PauseButton_pressed"]
